@@ -127,7 +127,7 @@
         <profile>
             <id>tools-default</id>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
                 <file>
                     <exists>${java.home}/../lib/tools.jar</exists>
                 </file>
@@ -135,6 +135,17 @@
             <properties>
                 <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
             </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.sun</groupId>
+                        <artifactId>tools</artifactId>
+                        <version>1.0.0</version>
+                        <scope>system</scope>
+                        <systemPath>${java.home}/../lib/tools.jar</systemPath>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
         </profile>
         <profile>
             <id>tools-jenkins</id>
@@ -147,6 +158,17 @@
             <properties>
                 <toolsjar>${java.home}/lib/tools.jar</toolsjar>
             </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.sun</groupId>
+                        <artifactId>tools</artifactId>
+                        <version>1.0.0</version>
+                        <scope>system</scope>
+                        <systemPath>${java.home}/lib/tools.jar</systemPath>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
         </profile>
         <profile>
             <id>tools-mac</id>
@@ -159,6 +181,17 @@
             <properties>
                 <toolsjar>${java.home}/../Classes/classes.jar</toolsjar>
             </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.sun</groupId>
+                        <artifactId>tools</artifactId>
+                        <version>1.0.0</version>
+                        <scope>system</scope>
+                        <systemPath>${java.home}/../Classes/classes.jar</systemPath>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
         </profile>
         <profile>
             <!-- needed as profile, as getting issue with Maven Plugin :( -->
@@ -208,6 +241,34 @@
                 </plugins>
             </reporting>
         </profile>
+        <profile>
+            <id>Java-9</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <compiler.target>1.8</compiler.target>
+                <compiler.source>1.8</compiler.source>
+                <exclude.tests.concolic>**/*Concolic*.java</exclude.tests.concolic>
+                <exclude.tests.mimeType>**/*TestMIMEType.java</exclude.tests.mimeType>
+            </properties>
+            <dependencyManagement>
+                <dependencies>
+                </dependencies>
+            </dependencyManagement>
+        </profile>
+        <profile>
+            <id>Java-8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <compiler.target>1.8</compiler.target>
+                <compiler.source>1.8</compiler.source>
+                <exclude.tests.concolic></exclude.tests.concolic>
+                <exclude.tests.mimeType></exclude.tests.mimeType>
+            </properties>
+        </profile>
     </profiles>
 
 
@@ -218,11 +279,15 @@
             you want to add, add a comment regarding its used license. -->
         <dependencies>
             <dependency>
-                <groupId>com.sun</groupId>
-                <artifactId>tools</artifactId>
-                <version>1.0.0</version>
-                <scope>system</scope>
-                <systemPath>${toolsjar}</systemPath>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>2.3.0</version>
             </dependency>
             <dependency>
                 <!-- GPL, but classpath exception -->
@@ -264,7 +329,7 @@
                 <!-- MIT -->
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>2.16.0</version>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <!-- Common Public License Version 1.0 -->
@@ -276,31 +341,31 @@
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-commons</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-tree</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-analysis</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-util</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
@@ -389,11 +454,17 @@
                 <version>1.0.1.Final</version>
             </dependency>
             -->
+            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
             <dependency>
-                <!-- LGPL 2.1 -->
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.2.13.Final</version>
+                <version>5.4.4.Final</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
@@ -449,6 +520,7 @@
                 <artifactId>maven-verifier</artifactId>
                 <version>1.6</version>
             </dependency>
+
             <dependency>
                 <!-- Apache 2 -->
                 <groupId>org.apache.ant</groupId>
@@ -528,6 +600,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
 
 
     <build>
@@ -668,10 +741,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${compiler.source}</source>
+                    <target>${compiler.target}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
@@ -680,7 +753,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <source>1.8</source>
+                    <source>${compiler.source}</source>
                     <additionalOptions>-Xdoclint:none</additionalOptions>
                 </configuration>
             </plugin>
@@ -718,7 +791,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.21.0</version>
                 <configuration>
                     <!--<rerunFailingTestsCount>${rerunFailingTestsCount}</rerunFailingTestsCount>-->
                     <forkCount>1</forkCount>
@@ -732,8 +805,10 @@
                     <excludes>
                         <exclude>${integrationTests}</exclude>
                         <exclude>${systemTests}</exclude>
+                        <exclude>${exclude.tests.concolic}</exclude>
+                        <exclude>${exclude.tests.mimeType}</exclude>
                     </excludes>
-                    <argLine> -Xms512m -Xmx4096m </argLine>
+                    <argLine>-Djdk.attach.allowAttachSelf=true -Xms512m -Xmx4096m </argLine>
                 </configuration>
             </plugin>
             <!-- pluging to run tests after 'package' phase in 'integration-test' -->
@@ -747,6 +822,7 @@
                         <include>${integrationTests}</include>
                         <include>${systemTests}</include>
                     </includes -->
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -910,8 +986,6 @@
                         </execution>
                     </executions>
                 </plugin>
-
-
             </plugins>
         </pluginManagement>
     </build>
